# gene_finder

./: .python-version  README.md  dataset_generation.py  generate_gene_finder_training_data.pl  pyproject.toml
gene_finder/: data_exploration.ipynb  dataset_generation.py
notebooks/: eda.ipynb  hyperparameter_tuning.ipynb  test.py  torchtext.ipynb  train_model.py
tests/: test_gene_finder.py
