[tool.poetry]
name = "gene_finder"
version = "0.1.0"
description = ""
authors = ["William Dimitrios Paraschas <dimitrios@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
